-
Bug
-
Resolution: Fixed
-
Critical
-
Lustre 2.7.0
-
3
-
16439
The following test will not migrate the files, but sends them to stdout (eg. the display).
./llmount.sh cd /mnt/lustre cp /bin/ls . ~/lustre-cleanup/lustre/utils/lfs migrate -o 0 ls
The problem is in llapi_file_open_param(), where rc is set to 1 by llapi_search_ost(), and then never reset.
Patch will follow.
(I can't believe that didn't break any test!)
- is related to
-
LU-4665 utils: lfs setstripe to specify OSTs
-
- Resolved
-